--- a/.github/workflows/news-cron.yml
+++ b/.github/workflows/news-cron.yml
@@ -28,9 +28,7 @@ jobs:
           DISCORD_NIGHTREIGN_WEBHOOK: ${{ secrets.DISCORD_NIGHTREIGN_WEBHOOK }}
 
       - name: Commit state update
-        run: |
-          git config user.name "news-bot"
-          git config user.email "news-bot@users.noreply.github.com"
-          git add nightreign/state.json
-          git commit -m "Update news state" --no-verify || echo "No changes"
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: 'Update Nightreign last posted article'
+          file_pattern: 'nightreign/state.json'
