updated workflow file to fix updated state files not getting committed

--- a/.github/workflows/news-cron.yml
+++ b/.github/workflows/news-cron.yml
@@ -38,5 +38,5 @@ jobs:
         with:
           commit_message: 'Update news state'
           file_pattern: |
-            'nightreign/state.json'
-            'arc-raiders/state.json'
+            nightreign/state.json
+            arc-raiders/state.json
