update file patter to cover all state files without missing out some due to block literal not being picked up by GH action properly

--- a/.github/workflows/news-cron.yml
+++ b/.github/workflows/news-cron.yml
@@ -37,6 +37,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'Update news state'
-          file_pattern: |
-            nightreign/state.json
-            arc-raiders/state.json
+          file_pattern: '**/state.json'
